tests/parser-test-files/bad-files/parse-attribute.1.error
error: Orphan attribute
  --> test:4:0
   |
 4 |  (repr :enum)
   |  ^^^^^^^^^^^^ attribute must be attached to another form
