tests/parser-test-files/bad-files/parse-attribute.1.coal
;; BAD: Parse Attribute
(package test-package)

(repr :enum)
